--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=${PORT:8083}
+
+#digifact.usuario = jll@tiendas3b.com
+#digifact.contrasena = BbB1234!
+
+digifact.usuario = demo@tiendas3b.com
+digifact.contrasena = 12345
