--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
 server.port=${PORT:8083}
 
+#digifact.usuario = demo@tiendas3b.com
+#digifact.contrasena = 12345
 digifact.usuario = jll@tiendas3b.com
 digifact.contrasena = BbB1234!
 
-#digifact.usuario = demo@tiendas3b.com
-#digifact.contrasena = 12345
+digifact.moneda=MXN
+digifact.tipodecomprobante=FA
+digifact.metododepago=PUE
+digifact.condicionesdepago=PAGO AL CONTADO
+digifact.exportacion=01
+digifact.objimp=02
+digifact.impuesto=002
+digifact.tipofactor=Tasa
+digifact.impuesto2=003
+digifact.version=4.0
+
+
